--- a/JamSite/about.html
+++ b/JamSite/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <script src="index.php"></script>
     <script src="style.css"></script>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Assistant|Barlow+Semi+Condensed|Khula:800|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
