--- a/JamSite/contact.html
+++ b/JamSite/contact.html
@@ -8,12 +8,28 @@
 <body>
     <h1>Let’s connect!</h1>
     <h3>Send me an email regarding an digital services you are interested in, and I will happily get back to you. </h3>
-    <form action="mailto:jamiec@guardianowldigital.com" method="post" enctype="text/plain">
-    Name:<br>
-    <input type="text" name="name"><br>
-    E-mail:<br>
-    <input type="text" name="mail"><br>
-    <input type="submit" value="Send">
-    <input type="reset" value="Reset">
-    </form>
+    <form action="mailto:jamiec@guardianowldigital.com">
+            <ul class="form-style-1">
+                <li><label>Full Name <span class="required">*</span></label><input type="text" name="field1" class="field-divided" placeholder="First" /> <input type="text" name="field2" class="field-divided" placeholder="Last" /></li>
+                <li>
+                    <label>Email <span class="required">*</span></label>
+                    <input type="email" name="field3" class="field-long" />
+                </li>
+                <li>
+                    <label>Subject</label>
+                    <select name="field4" class="field-select">
+                    <option value="Advertise">Advertise</option>
+                    <option value="Partnership">Partnership</option>
+                    <option value="General Question">General</option>
+                    </select>
+                </li>
+                <li>
+                    <label>Your Message <span class="required">*</span></label>
+                    <textarea name="field5" id="field5" class="field-long field-textarea"></textarea>
+                </li>
+                <li>
+                    <input type="submit" value="Submit" />
+                </li>
+            </ul>
+            </form>
 </body>
