--- a/JamSite/index.html
+++ b/JamSite/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Denver Owls</title>
+    <script src="index.php"></script>
     <script src="style.css"></script>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Assistant|Barlow+Semi+Condensed|Khula:800|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
