--- a/JamSite/about.html
+++ b/JamSite/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <head>
     <script src="index.php"></script>
-    <script src="style.css"></script>
+    <link rel= "style sheet" type ="text/css" href="style.css"></link>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Assistant|Barlow+Semi+Condensed|Khula:800|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Jamie Campbell</h1>
     <h2>Denver, CO</h2>
-    <img src="Images/Jamie.png">
+    <img src="Images/Jamie.png" align="left">
     <p>Search Engine Optimization<br>
         Front End Web Development<br>
         Content and Blog Writing<br>
